src/objects/CRM_WF_Cartas_Origen__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_A_Partir_De__c</fullName>
        <inlineHelpText>Se actualiza de forma automática con la fecha en que se inicia el proceso de autorización.</inlineHelpText>
        <label>A partir de</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Adicionales_Al_Layout__c</fullName>
        <inlineHelpText>Agregar campos adicionales al Layout mínimo autorizado.</inlineHelpText>
        <label>Adicionales en Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Ap_De_Extension_Borrado_Inf__c</fullName>
        <inlineHelpText>Se considera en días naturales</inlineHelpText>
        <label>Aprobación de extensión Borrado de Inf</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Area_Autorizador__c</fullName>
        <formula>&quot;Campañas CRM&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Área autorizador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Area_BBVA_Bancomer__c</fullName>
        <label>Área BBVA Bancomer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Area_Jefe_Director__c</fullName>
        <formula>&quot;Campañas CRM&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Área director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Area_Solicitante__c</fullName>
        <formula>&quot;Campañas CRM&quot;</formula>
        <label>Área solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Autorizad__c</fullName>
        <formula>&quot;CRM_WF_Generador__r.CRM_WF_Autorizador_DG__r.Name&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autorizador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Buzon_Squad__c</fullName>
        <label>Buzón Squad</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Campana_Carta_Custodia__c</fullName>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cartas Origen</relationshipLabel>
        <relationshipName>Cartas_Origen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CRM_WF_Canales_Com_Carta_Custodia__c</fullName>
        <label>Canales de comunicación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Correo Directo</fullName>
                </value>
                <value>
                    <fullName>Correo Electrónico</fullName>
                </value>
                <value>
                    <fullName>Encuestas Telefónicas</fullName>
                </value>
                <value>
                    <fullName>Inserto en edo. cta.</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Redes Sociales</fullName>
                </value>
                <value>
                    <fullName>Login Marketing</fullName>
                </value>
                <value>
                    <fullName>Cenefa de edo. cta.</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Canales_Comunicacion_Proveedor__c</fullName>
        <formula>&quot;TEXT ( CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Canales_De_Comunicacion__c )&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canales de comunicación proveedor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Correo_Electronico_Custodio_1__c</fullName>
        <formula>&quot;CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Correo_Electronico_Custodio1__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo Electrónico Custodio 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Correo_Electronico_Custodio_2__c</fullName>
        <formula>&quot;CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Correo_Electronico_Custodio_2__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo Electrónico Custodio 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Creditos__c</fullName>
        <label>Créditos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hipotecario</fullName>
                </value>
                <value>
                    <fullName>PPI</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Nomina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Cuentas_De_Captacion__c</fullName>
        <label>Cuentas de captación</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahorro</fullName>
                </value>
                <value>
                    <fullName>Fondos, Inversiones y plazo</fullName>
                </value>
                <value>
                    <fullName>Cheques</fullName>
                </value>
                <value>
                    <fullName>Nomina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Desea_Cancelar_La_Carta_Origen__c</fullName>
        <label>¿Desea cancelar la Carta Origen?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Destino__c</fullName>
        <label>Destino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nacional</fullName>
                </value>
                <value>
                    <fullName>Extranjero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Director__c</fullName>
        <description>Campo tipo fórmula para Workflow que devuelve el director asociado al Generador</description>
        <formula>&quot;CRM_WF_Generador__r.CRM_WF_Director__r.Name&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Email_Autorizador__c</fullName>
        <formula>&quot;CRM_WF_Generador__r.CRM_WF_Autorizador_DG__r.CRM_WF_Correo_Electronico__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email autorizador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Email_Generador__c</fullName>
        <formula>&quot;CRM_WF_Generador__r.CRM_WF_Correo_Electronico__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email generador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Email_Suplente__c</fullName>
        <formula>&quot;CRM_WF_Generador__r.CRM_WF_Suplente__r.CRM_WF_Correo_Electronico__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email suplente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Especificar_Otro_Canal__c</fullName>
        <label>Especificar Otro Canal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Especificar_Otro_Origen__c</fullName>
        <label>Especificar Otro Origen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Especificar_Otro_Tipo_De_Ext__c</fullName>
        <label>Especificar Otro Tipo de extracción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Etapa_Campana__c</fullName>
        <formula>TEXT (CRM_WF_Campana_Carta_Custodia__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etapa Campaña</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Etapa_Carta_Custodia__c</fullName>
        <label>Etapa Carta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud</fullName>
                    <default>true</default>
                    <label>Solicitud</label>
                </value>
                <value>
                    <fullName>Autorización Generador</fullName>
                </value>
                <value>
                    <fullName>Autorización CRM</fullName>
                </value>
                <value>
                    <fullName>Autorización Inteligencia Comercial</fullName>
                </value>
                <value>
                    <fullName>Autorización Fraudes</fullName>
                </value>
                <value>
                    <fullName>Autorización Seguridad</fullName>
                </value>
                <value>
                    <fullName>Aprobada</fullName>
                </value>
                <value>
                    <fullName>Rechazada</fullName>
                </value>
                <value>
                    <fullName>Cancelada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_FIC__c</fullName>
        <formula>CRM_WF_Campana_Carta_Custodia__r.CRM_WF_FIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Aprobacion_Seguridad__c</fullName>
        <label>Fecha de aprobación de seguridad</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Aprobada_Ext_Borrado__c</fullName>
        <inlineHelpText>Se considera en días naturales</inlineHelpText>
        <label>Fecha aprobada de ext. de borrado</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Inicio_Aprobacion__c</fullName>
        <label>Fecha Inicio de aprobación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Solicitud_De_Ext_Borrado__c</fullName>
        <inlineHelpText>Se considera en días naturales</inlineHelpText>
        <label>Fecha de solicitud de ext. de borrado</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Frecuencia__c</fullName>
        <label>Frecuencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Única Vez</fullName>
                </value>
                <value>
                    <fullName>Semanal</fullName>
                </value>
                <value>
                    <fullName>Quincenal</fullName>
                </value>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Bimestral</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Hasta_Carta_Custodia__c</fullName>
        <inlineHelpText>La vigencia de la solicitud es de un mes en caso de ser Ünica vez, para envios recurrentes podrá ser de 3 meses máximo.</inlineHelpText>
        <label>Hasta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Hasta__c</fullName>
        <formula>IF (ISPICKVAL (CRM_WF_Frecuencia__c, &quot;Única Vez&quot;),  (CRM_WF_A_Partir_De__c + 30), 
IF (ISPICKVAL (CRM_WF_Frecuencia__c, &quot;Semanal&quot;),    (CRM_WF_A_Partir_De__c + 90), 
IF (ISPICKVAL (CRM_WF_Frecuencia__c, &quot;Quincenal&quot;),  (CRM_WF_A_Partir_De__c + 90), 
IF (ISPICKVAL (CRM_WF_Frecuencia__c, &quot;Mensual&quot;),    (CRM_WF_A_Partir_De__c + 90), 
IF (ISPICKVAL (CRM_WF_Frecuencia__c, &quot;Bimestral&quot;),  (CRM_WF_A_Partir_De__c + 90),
IF (ISPICKVAL (CRM_WF_Frecuencia__c, &quot;Trimestral&quot;), (CRM_WF_A_Partir_De__c + 90), 
IF (ISPICKVAL (CRM_WF_Frecuencia__c, &quot;Semestral&quot;),  (CRM_WF_A_Partir_De__c + 90),
IF (ISPICKVAL (CRM_WF_Frecuencia__c, &quot;Anual&quot;),      (CRM_WF_A_Partir_De__c + 90),
null ))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Se calculan 30 días sí la frecuencia es igual a &quot;Única Vez&quot; y 90 días si es diferente.</inlineHelpText>
        <label>Hasta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Ic_Participa__c</fullName>
        <inlineHelpText>I.C. participa en la definicion de los criterios para la campaña o proyecto</inlineHelpText>
        <label>¿I.C. participa?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Jefe__c</fullName>
        <formula>&quot;CRM_WF_Nombre_Del_Solicitante__r.CRM_WF_Jefe__r.Name&quot;</formula>
        <label>Jefe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Just_De_Cancelacin_Carta__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor de texto para Justificar la cancelación de una Carta Origen</description>
        <label>Justificación de Cancelación de Carta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Justificacion_Extension_Borrado__c</fullName>
        <label>Justificación de extensión de borrado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Layout__c</fullName>
        <label>Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Monitoreo_De_C_Recurrentes__c</fullName>
        <formula>IF(CRM_WF_Total_De_C_Recurrentes__c = CRM_WF_Numero_De_Bases_A_Enviar__c,IMAGE(&quot;/servlet/servlet.FileDownload?file=0151U000001YpSn&quot;, &quot;Red&quot; ),

IF(CRM_WF_Total_De_C_Recurrentes__c = 3,IMAGE(&quot;/servlet/servlet.FileDownload?file=0151I000001RXc3&quot;, &quot;Yellow&quot; ),

IMAGE(&quot;/servlet/servlet.FileDownload?file=0151U000001YpSp&quot;, &quot;Green&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monitoreo de Cartas Recurrentes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Custodio_1__c</fullName>
        <formula>&quot;CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Nombre_Custodio_1__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Custodio 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Custodio_2__c</fullName>
        <formula>&quot;CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Nombre_Custodio_2__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Custodio 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Notificacion_Monitoreo__c</fullName>
        <label>Notificación de Monitoreo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_De_Bases_A_Enviar__c</fullName>
        <label>Número de Bases a enviar</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_De_Bases_Enviadas__c</fullName>
        <inlineHelpText>Suma de todas las bases enviadas de acuerdo al registro de salida de la Carta Recurrente</inlineHelpText>
        <label>Número de Bases enviadas</label>
        <summarizedField>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Numero_de_Bases__c</summarizedField>
        <summaryForeignKey>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Carta_Origen_C_Recurrente__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_De_Registros_Enviados__c</fullName>
        <inlineHelpText>Suma de todos los registros enviados de acuerdo al registros de salida en las Cartas Recurrentes</inlineHelpText>
        <label>Número de registros enviados</label>
        <summarizedField>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Numero_de_registros_en_bases__c</summarizedField>
        <summaryForeignKey>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Carta_Origen_C_Recurrente__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Objetivo__c</fullName>
        <label>Objetivo - Propósito de la Entrega</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Origen__c</fullName>
        <label>Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campaña</fullName>
                </value>
                <value>
                    <fullName>Proyecto</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Receptores_Adicionales__c</fullName>
        <inlineHelpText>Agregar receptores con Nombre, teléfono y área, sólo si se requiere regreso de la información.</inlineHelpText>
        <label>Receptores adicionales</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Referencia__c</fullName>
        <formula>CRM_WF_Campana_Carta_Custodia__r.Name + &quot; &quot; + &quot;-&quot; + &quot; &quot; + CRM_WF_Campana_Carta_Custodia__r.CRM_WF_FIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referencia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Registros_En_Primer_Envio__c</fullName>
        <label>Registros en 1er envío</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Regreso_De_Informacion__c</fullName>
        <label>¿Requiere regreso de información?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Requiere_Aprobacion_De_Fraudes__c</fullName>
        <inlineHelpText>Si el layout requiere el campo de tarjeta en claro - con 16 dígitos, la Carta deberá ser aprobada por Fraudes</inlineHelpText>
        <label>¿Requiere Tarjeta en Claro?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Salidas_Recibidas__c</fullName>
        <inlineHelpText>Número de Salidas de Información que han sido recibidas por Proveedor</inlineHelpText>
        <label>Cartas Recurrentes enviadas a Proveedor</label>
        <summaryFilterItems>
            <field>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Etapa_De_Salida_De_Informacion__c</field>
            <operation>equals</operation>
            <value>Base enviada a proveedor, Base recibida por proveedor</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Carta_Origen_C_Recurrente__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Seguros_Bancomer__c</fullName>
        <label>Seguros Bancomer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autos y Bienes</fullName>
                </value>
                <value>
                    <fullName>Accidentes y enfermedades</fullName>
                </value>
                <value>
                    <fullName>Vida y familia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Servicios_Digitales__c</fullName>
        <label>Servicios digitales</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B com</fullName>
                </value>
                <value>
                    <fullName>B movil</fullName>
                </value>
                <value>
                    <fullName>BBVA Wallet</fullName>
                </value>
                <value>
                    <fullName>BBVA Send</fullName>
                </value>
                <value>
                    <fullName>Bancomer SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Sol_De_Extension_Borrado_Inf__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Se considera en días naturales</inlineHelpText>
        <label>Solicitud de extensión de Borrado de Inf</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tarjetas_De_Credito__c</fullName>
        <label>Tarjetas de Crédito</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bancarias</fullName>
                </value>
                <value>
                    <fullName>Negocios y Micronegocios</fullName>
                </value>
                <value>
                    <fullName>VIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Telefono_Autorizador__c</fullName>
        <formula>&quot;CRM_WF_Generador__r.CRM_WF_Autorizador_DG__r.CRM_WF_Telefono_Extension__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel/Ext autorizador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Telefono_Custodio_1__c</fullName>
        <formula>&quot;CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Telefono_Custodio1__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono Custodio 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Telefono_Custodio_2__c</fullName>
        <formula>&quot;CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Telefono_Custodio_2__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono Custodio 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Telefono_Generador__c</fullName>
        <formula>&quot;CRM_WF_Generador__r.CRM_WF_Telefono_Extension__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel/Ext generador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Telefono_Jefe_Director__c</fullName>
        <formula>&quot;CRM_WF_Generador__r.CRM_WF_Director__r.CRM_WF_Telefono_Extension__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel/Ext director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Telefono_Solicitante__c</fullName>
        <formula>&quot;CRM_WF_Nombre_Del_Solicitante__r.CRM_WF_Telefono_Extension__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel/Ext solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_De_Informacion__c</fullName>
        <label>Tipo de información</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interno BBVA</fullName>
                </value>
                <value>
                    <fullName>Externo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_de_Envio__c</fullName>
        <label>Tipo de Envío</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interno</fullName>
                </value>
                <value>
                    <fullName>Externo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_Bases_En_C_Recurrentes__c</fullName>
        <label>Total Bases en Cartas Recurrentes</label>
        <summarizedField>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Bases_A_Enviar__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Etapa_De_Salida_De_Informacion__c</field>
            <operation>notEqual</operation>
            <value>Cancelada</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Carta_Origen_C_Recurrente__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_De_C_Recurrentes__c</fullName>
        <label>Total de Cartas Recurrentes</label>
        <summaryFilterItems>
            <field>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Etapa_De_Salida_De_Informacion__c</field>
            <operation>notEqual</operation>
            <value>Cancelada</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Carta_Origen_C_Recurrente__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_Registros_En_C_Recurrentes__c</fullName>
        <label>Total Registros en Cartas Recurrentes</label>
        <summarizedField>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Numero_De_Registros__c</summarizedField>
        <summaryFilterItems>
            <field>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Etapa_De_Salida_De_Informacion__c</field>
            <operation>notEqual</operation>
            <value>Cancelada</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Cartas_Recurrentes__c.CRM_WF_Carta_Origen_C_Recurrente__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_de_Registros__c</fullName>
        <label>Total de Registros</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Uso_De_La_Informacion__c</fullName>
        <inlineHelpText>Agregar uso de la información, sólo si se requiere regreso de la información.</inlineHelpText>
        <label>Uso de la información</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Usuario_Red_Custodio_1__c</fullName>
        <formula>&quot;CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Usuario_Red_Custodio_1__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usuario Red Custodio 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Usuario_Red_Custodio_2__c</fullName>
        <formula>&quot;CRM_WF_Empresa_Area_Bancomer__r.CRM_WF_Usuario_Red_Custodio_2__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usuario Red Custodio 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Area_del_solicitante__c</fullName>
        <description>Campo tipo fórmula para Workflow, regresa la cuenta (Squad) asociada al solicitante</description>
        <formula>GBL_WF_Nombre_Del_Solicitante__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Área del solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Autorizador__c</fullName>
        <description>Campo de tipo fórmula para Workflow que trae el Autorizador asociado al Generador</description>
        <formula>GBL_WF_Generador__r.GBL_WF_Autorizador_DG__r.GBL_WF_Nombre_Completo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autorizador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Canales_Com_Proveedor__c</fullName>
        <formula>TEXT ( GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Canales_De_Comunicacion__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canales de comunicación proveedor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Correo_Electronico_Custodio_1__c</fullName>
        <formula>GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Correo_Electronico_Custodio_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo Electrónico Custodio 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Correo_Electronico_Custodio_2__c</fullName>
        <formula>GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Correo_Electronico_Custodio_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo Electrónico Custodio 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Director__c</fullName>
        <formula>GBL_WF_Generador__r.GBL_WF_Director__r.GBL_WF_Nombre_Completo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Email_autorizador__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow que devuelve el correo electrónico del Autorizador del Generador</description>
        <formula>GBL_WF_Generador__r.GBL_WF_Autorizador_DG__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email autorizador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Email_generador__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow que regresa el valor del correo electrónico del Generador</description>
        <formula>GBL_WF_Generador__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email generador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Email_suplente__c</fullName>
        <description>Campo para la aplicación Workflow que regresa el correo electrónico del suplente del Generador</description>
        <formula>GBL_WF_Generador__r.GBL_WF_Suplente__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email suplente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Emp_Area_Bancomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona una Empresa o Área BBVA a la cuenta</description>
        <label>Empresa / Área BBVA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.GBL_WF_Vigente__c</field>
                <operation>equals</operation>
                <value>Sí</value>
            </filterItems>
            <infoMessage>El proveedor debe de estar vigente</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cartas Origen</relationshipLabel>
        <relationshipName>Cartas_Origen</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>